add web manifest for pwas

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/react": "^11.1.5",
     "gatsby": "^2.26.1",
     "gatsby-plugin-emotion": "^5.4.0",
+    "gatsby-plugin-manifest": "^2.12.0",
     "gatsby-plugin-typography": "^2.12.0",
     "gatsby-source-filesystem": "^2.11.0",
     "gatsby-transformer-remark": "^2.16.0",
